---=== Version 0.4.0 ===---
-= Additions =-
- Added crushing recipes specific to different ore variants with different secondary products
- Added music for being underwater
- Added music for being in a village

-= Changes =-
- Tweaked sand production, and added the ability to get zinc and copper from sand

-= Removals =-
- Removed the music for mineshafts, as their bounding boxes are incredibly large compared to their actual size and it meant their music would often play at inopportune times

---=== Version 0.3.0 ===---
-= Modlist Changes =-
- Added ChoiceTheorem's Overhauled Villages as it is more complete than Better Villages, and has compatibility with Towns & Towers to improve the non-vanilla villages there
- Removed Better Villages
- Added Ambient Sounds 5
- Added Music Triggers along with music from The Adventurer's Journey by Kairi Sawler and Enderal by SureAI. More information can be found in the credits.
- Removed Medieval Music
- Removed Infinite Music
- Added Excavated Variants to add ore variants for stone types
- Added GoProne to allow for going prone on demand
- Added FastSuite, FastWorkbench, and FastFurnace for performance
- Added MacCraft to help with MacOS compatibility
- Added Drippy Loading Screen and It's the Little Things to allow for more UI customization in the future
- Added In Control to allow customization of mobs
- Added Fx Control to allow customization of player effects

-= Additions =-
- Added biome-specific music, as well as music related to several other events
- Added food and meals search category tags to JEI. See the guidebook for more
- Added recipes to produce white, black, and orange sand

-= Changes =-
- Updated in game Guidebook
- Changed the menu panorama
- Changed the anvil to be made from 7 cast iron ingots in an I pattern
- Changed the recipes for little logistics vehicles to use brass instead of bronze to make them a little easier to make
- Changed metal doors and trapdoors to use sheets instead of ingots